--- a/index.html
+++ b/index.html
@@ -2,54 +2,99 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>PersoShift – coming soon</title>
+    <title>PersoShift ETF-Rechner</title>
+    <!-- Schrift & Chart.js -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <style>
+      body{font-family:'Inter',sans-serif;text-align:center;padding:2rem;}
+      input,button{font-size:1rem;padding:0.4rem;width:100%;}
+      label{font-weight:600;}
+      #calc{max-width:600px;margin:2rem auto;text-align:left}
+      #result{font-size:1.1rem;font-weight:600;margin-top:1rem}
+      canvas{max-width:700px;margin:2rem auto;display:block}
+    </style>
   </head>
   <body>
-  <h1>PersoShift ETF-Rechner</h1>
+    <h1>PersoShift ETF-Rechner</h1>
 
-  <section id="calc" style="max-width:600px;margin:2rem auto;text-align:left">
-    <label>Monatsrate (€)<br>
-      <input id="rate" type="number" value="50" min="1" style="width:100%">
-    </label><br><br>
+    <section id="calc">
+      <label>Monatsrate (€)<br>
+        <input id="rate" type="number" value="50" min="1">
+      </label><br><br>
 
-    <label>Laufzeit (Jahre)<br>
-      <input id="years" type="number" value="15" min="1" style="width:100%">
-    </label><br><br>
+      <label>Laufzeit (Jahre)<br>
+        <input id="years" type="number" value="15" min="1">
+      </label><br><br>
 
-    <label>Jahresrendite (%)<br>
-      <input id="interest" type="number" value="7" step="0.1" min="0" style="width:100%">
-    </label><br><br>
+      <label>Jahresrendite (%)<br>
+        <input id="interest" type="number" value="7" step="0.1" min="0">
+      </label><br><br>
 
-    <button onclick="calc()" style="width:100%;padding:0.6rem;font-weight:600">
-      Berechnen
-    </button><br><br>
+      <button onclick="calc()">Berechnen</button>
 
-    <div id="result" style="font-size:1.1rem;font-weight:600"></div>
-  </section>
+      <div id="result"></div>
+    </section>
 
-  <script>
-    function calc(){
-      const rate     = parseFloat(document.getElementById('rate').value);
-      const years    = parseInt(document.getElementById('years').value);
-      const interest = parseFloat(document.getElementById('interest').value) / 100;
-      const months   = years * 12;
-      const rMonthly = interest / 12;
+    <canvas id="chart"></canvas>
 
-      // Sparformel: FV = P * [ ((1+r)^n - 1) / r ]
-      const endCap   = rate * ( (Math.pow(1+rMonthly, months) - 1) / rMonthly );
-      const inTotal  = rate * months;
-      const profit   = endCap - inTotal;
+    <script>
+      let myChart;
+      function calc(){
+        const rate     = parseFloat(document.getElementById('rate').value);
+        const years    = parseInt(document.getElementById('years').value);
+        const interest = parseFloat(document.getElementById('interest').value) / 100;
+        const rMonth   = interest / 12;
 
-document.getElementById('result').innerHTML =
-  `Endkapital: <b>${endCap.toLocaleString('de-DE',{
-      style:'currency',currency:'EUR',maximumFractionDigits:0})}</b><br>` +
+        const contribYear = rate * 12;
+        const labels  = [];
+        const contrib = [];
+        const profit  = [];
 
-  `Einzahlungen: ${inTotal.toLocaleString('de-DE',{
-      style:'currency',currency:'EUR',maximumFractionDigits:0})}<br>` +
+        let value = 0;
+        let profitAccum = 0;
+        for (let y = 1; y <= years; y++){
+          for (let m = 0; m < 12; m++){
+            value = value * (1 + rMonth) + rate;
+          }
+          const paidSoFar = contribYear * y;
+          const profitCum = value - paidSoFar;
+          const profitThisYear = profitCum - profitAccum;
+          profitAccum = profitCum;
 
-  `Zinseszins-Gewinn: ${profit.toLocaleString('de-DE',{
-      style:'currency',currency:'EUR',maximumFractionDigits:0})}`;
-    }
-  </script>
+          labels.push('Jahr '+y);
+          contrib.push(contribYear);
+          profit.push(profitThisYear);
+        }
+
+        const endCap  = value;
+        const inTotal = contribYear * years;
+        const profitTot = endCap - inTotal;
+
+        document.getElementById('result').innerHTML =
+          `Endkapital: <b>${endCap.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})}</b><br>` +
+          `Einzahlungen: ${inTotal.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})}<br>` +
+          `Zinseszins-Gewinn: ${profitTot.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})}`;
+
+        if (myChart) myChart.destroy();
+        const ctx = document.getElementById('chart').getContext('2d');
+        myChart = new Chart(ctx, {
+          type: 'bar',
+          data: {
+            labels: labels,
+            datasets: [
+              { label: 'Einzahlungen/Jahr', data: contrib },
+              { label: 'Gewinn/Jahr', data: profit }
+            ]
+          },
+          options: {
+            plugins:{legend:{position:'bottom'}},
+            responsive:true,
+            scales:{y:{beginAtZero:true}}
+          }
+        });
+      }
+    </script>
   </body>
 </html>
