--- a/index.html
+++ b/index.html
@@ -8,105 +8,94 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
-      body{font-family:'Inter',sans-serif;text-align:center;padding:2rem;background:#f6f8fa}
-      h1{font-size:1.75rem;font-weight:600;margin-bottom:1rem}
-      #calc{max-width:650px;margin:0 auto;text-align:left;background:#fff;padding:2rem;border-radius:12px;box-shadow:0 4px 18px rgba(0,0,0,.06)}
+      body{font-family:'Inter',sans-serif;text-align:center;padding:2rem;max-width:900px;margin:auto}
+      h1{font-size:2rem;margin-bottom:1.5rem}
       label{font-weight:600}
-      input{padding:.4rem;width:100%;border:1px solid #ccc;border-radius:6px;margin-top:.25rem}
-      button{margin-top:1rem;width:100%;padding:.75rem;font-weight:600;border:none;border-radius:8px;cursor:pointer;background:#2563eb;color:#fff}
-      #result{margin-top:1.25rem;font-size:1.05rem;font-weight:600;line-height:1.6}
-      canvas{max-width:700px;margin:2rem auto;display:block}
+      input,button{font-size:1rem;padding:.4rem .6rem;width:100%;box-sizing:border-box;margin-top:.2rem}
+      button{background:#2563eb;color:#fff;border:none;border-radius:4px;cursor:pointer;margin-top:.8rem}
+      button:hover{background:#1d4ed8}
+      #result{margin-top:1rem;font-size:1.1rem;font-weight:600}
+      canvas{max-width:800px;margin:2rem auto}
     </style>
   </head>
   <body>
-    <h1>PersoShift ETF‑Rechner</h1>
+    <h1>PersoShift ETF‑Rechner</h1>
 
-    <section id="calc">
-      <label>Monatsrate (€)
+    <section id="calc" style="text-align:left">
+      <label>Monatsrate (€)
         <input id="rate" type="number" value="50" min="1">
       </label><br><br>
 
-      <label>Laufzeit (Jahre)
+      <label>Laufzeit (Jahre)
         <input id="years" type="number" value="15" min="1">
       </label><br><br>
 
-      <label>Jahresrendite (%)
+      <label>Jahresrendite (%)
         <input id="interest" type="number" value="7" step="0.1" min="0">
       </label><br><br>
 
       <button onclick="calc()">Berechnen</button>
 
       <div id="result"></div>
-      <div id="compare"></div>
-      <canvas id="chart"></canvas>
     </section>
 
+    <canvas id="chart"></canvas>
+
     <script>
-      const taxRate = 0.26375;            // Kapitalertragsteuer + Soli ≈ 26,375 %
-      const inflation = 0.021;            // Langfristiger Inflations‑Ø Deutschland (~ 2,1 %) citeturn0search0
+      const TAX_RATE = 0.26375; // dt. Abgeltungsteuer inkl. Soli, ohne KiSt
       let myChart;
 
       function calc(){
-        const rate     = parseFloat(document.getElementById('rate').value);
-        const years    = parseInt(document.getElementById('years').value);
-        const pA       = parseFloat(document.getElementById('interest').value)/100;
-        const rMonth   = pA/12;
-        const contribYear = rate*12;
+        const rate   = parseFloat(document.getElementById('rate').value);
+        const years  = parseInt(document.getElementById('years').value);
+        const pA     = parseFloat(document.getElementById('interest').value)/100;
+        const pM     = pA/12;
+        const months = years*12;
 
-        let value = 0;
-        let labels=[], deposits=[], profits=[], losses=[];
-        let totalTaxInf=0;
-        let totalLoss=0;
-        let sumProfitNet=0;
+        // Endwert der Sparrate
+        const endCap = rate * ( (Math.pow(1+pM, months) - 1) / pM );
+        const deposits = rate * months;
+        const grossProfit = endCap - deposits;
+        const tax = grossProfit * TAX_RATE;
+        const netProfit = grossProfit - tax;
 
-        for(let y=1;y<=years;y++){
-          // 12 Monate simulieren
-          for(let m=0;m<12;m++){
-            value = value*(1+rMonth)+rate;
-          }
-          const paidSoFar = contribYear*y;
-          const grossCum  = value - paidSoFar;          // bis Ende Jahr y erwirtschafteter Brutto‑Gewinn
-          const profitThisYearGross = grossCum - profits.reduce((a,b)=>a+b,0) - losses.reduce((a,b)=>a+b,0);
-
-          const tax   = profitThisYearGross*taxRate;
-          const infl  = (paidSoFar + grossCum - tax)*inflation;
-          const lossThisYear = tax+infl;
-          const profitNet    = profitThisYearGross - lossThisYear;
-
-          labels.push("Jahr "+y);
-          deposits.push(contribYear);
-          profits.push(Math.max(0,profitNet));
-          losses.push(lossThisYear);
-
-          totalTaxInf += lossThisYear;
-        }
-        totalLoss = totalTaxInf;
-        const endCapBrutto = value;
-        const endCapNet    = value - totalLoss;
-        const paidTotal    = contribYear*years;
-        const netGain      = endCapNet - paidTotal;
-
-        // Ergebnisse
-        const fmt = v=>v.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0});
         document.getElementById('result').innerHTML =
-          `Endkapital (brutto): <b>${fmt(endCapBrutto)}</b><br>`+
-          `Abzüge Steuer+Inflation: ${fmt(totalLoss)}<br>`+
-          `Endkapital (netto real): <b>${fmt(endCapNet)}</b><br>`+
-          `Einzahlungen: ${fmt(paidTotal)}<br>`+
-          `Realer Gewinn: ${fmt(netGain)}`;
+          `Endkapital: <b>${fmt(endCap)}</b><br>`+
+          `Einzahlungen: ${fmt(deposits)}<br>`+
+          `Brutto‑Gewinn: ${fmt(grossProfit)}<br>`+
+          `Steuer (26,38 %): –${fmt(tax)}<br>`+
+          `Netto‑Gewinn: <b>${fmt(netProfit)}</b>`;
 
-        // Vergleich   0 % vs 2 % Tagesgeld (nominal)
-        const fv0 = paidTotal;                                       // 0 %
-        const fv2 = rate * ( (Math.pow(1+0.02/12,years*12)-1) / (0.02/12) );
-        const realFactor = Math.pow(1+inflation, years);
-        const fv0real = fv0/realFactor;
-        const fv2real = fv2/realFactor;
-        document.getElementById('compare').innerHTML =
-          `<br><u>Zum Vergleich (real):</u><br>`+
-          `0 % Zinsen (Matratze/​Giro): ${fmt(fv0real)}<br>`+
-          `2 % Tagesgeld: ${fmt(fv2real)}`;
+        // Jahreswerte für Chart
+        const labels = [];
+        const depositArr = [];
+        const netArr = [];
+        const taxArr = [];
+        let value = 0;
+        let gainCum = 0;
+        let taxCum = 0;
+        for(let y=1;y<=years;y++){
+          for(let m=0;m<12;m++){
+            value = value*(1+pM)+rate;
+          }
+          const depY = rate*12;
+          const grossY = value - deposits; // kumuliert
+          const profitY = grossY - gainCum; // Gewinn dieses Jahres
+          const taxY = profitY*TAX_RATE;
+          const netY = profitY - taxY;
+          gainCum += profitY;
+          taxCum += taxY;
 
-        // Diagramm   Einzahlung ☑, Gewinn netto ☑, Abzüge ☑ (gestapelt)
+          labels.push('Jahr '+y);
+          depositArr.push(depY);
+          netArr.push(netY);
+          taxArr.push(taxY);
+        }
+
+        drawChart(labels, depositArr, netArr, taxArr);
+      }
+
+      function drawChart(labels, dep, net, tax){
         if(myChart) myChart.destroy();
         const ctx = document.getElementById('chart').getContext('2d');
         myChart = new Chart(ctx, {
@@ -114,20 +103,21 @@
           data:{
             labels:labels,
             datasets:[
-              {label:'Einzahlung',data:deposits,backgroundColor:'#2563eb'},
-              {label:'Gewinn (after tax/​infl)',data:profits,backgroundColor:'#059669'},
-              {label:'Abzüge (Steuer+Infl)',data:losses,backgroundColor:'#f97316'}
+              {label:'Einzahlung',data:dep,backgroundColor:'#93c5fd'},
+              {label:'Netto‑Gewinn',data:net,backgroundColor:'#4ade80'},
+              {label:'Steuer',data:tax,backgroundColor:'#fca5a5'}
             ]
           },
           options:{
-            plugins:{legend:{position:'bottom'}},
             responsive:true,
-            scales:{
-              x:{stacked:true},
-              y:{stacked:true,beginAtZero:true}
-            }
+            plugins:{legend:{position:'bottom'}},
+            scales:{y:{beginAtZero:true,stacked:true},x:{stacked:true}}
           }
         });
+      }
+
+      function fmt(num){
+        return num.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0});
       }
     </script>
   </body>
