--- a/index.html
+++ b/index.html
@@ -1,147 +1,143 @@
 <!doctype html>
 <html lang="de">
-  <head>
-    <meta charset="utf-8">
-    <title>PersoShift ETF‑Rechner</title>
-    <!-- Schrift & Chart.js -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <style>
-      body{font-family:'Inter',sans-serif;text-align:center;padding:2rem;max-width:900px;margin:auto}
-      input,button{padding:.5rem;width:100%;box-sizing:border-box;border:1px solid #ccc;border-radius:4px}
-      label{display:block;margin-top:1rem;font-weight:600;text-align:left}
-      button{background:#2563eb;color:#fff;border:none;cursor:pointer;margin-top:1rem}
-      button:hover{background:#1d4ed8}
-      canvas{margin-top:2rem}
-      #compare{margin-top:3rem;text-align:left}
-    </style>
-  </head>
-  <body>
-    <h1>PersoShift ETF‑Rechner</h1>
+<head>
+  <meta charset="utf-8">
+  <title>PersoShift ETF‑Rechner</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    body{font-family:'Inter',sans-serif;text-align:center;padding:2rem;max-width:720px;margin:auto}
+    input,button,select{width:100%;padding:.6rem;margin-top:.3rem;font-size:1rem;border:1px solid #ccc;border-radius:6px}
+    button{cursor:pointer;font-weight:600;background:#4f46e5;color:#fff;border:none}
+    button:hover{background:#4338ca}
+    .row{display:flex;gap:1rem}
+    .row input{flex:1}
+    #advanced{display:none;margin-top:1rem;border:1px dashed #aaa;padding:1rem;border-radius:6px}
+    canvas{max-width:100%;margin:2rem auto}
+  </style>
+</head>
+<body>
+  <h1>PersoShift ETF‑Rechner</h1>
 
-    <section id="calc" style="text-align:left">
-      <label>Monatsrate (€)
-        <input id="rate" type="number" value="50" min="1">
+  <label>Monatsrate (€)
+    <input id="rate" type="number" value="50" min="1">
+  </label><br>
+
+  <label>Laufzeit (Jahre)
+    <input id="years" type="number" value="15" min="1">
+  </label><br>
+
+  <label>Jahresrendite (%)
+    <input id="interest" type="number" value="7" step="0.1" min="0">
+  </label><br>
+
+  <button id="toggle">Erweiterte Optionen anzeigen ▾</button>
+
+  <div id="advanced">
+    <label>Startkapital (€)
+      <input id="start" type="number" value="0" min="0">
+    </label><br>
+
+    <div class="row">
+      <label>Einmalzahlung (€)
+        <input id="lump" type="number" value="0" min="0">
       </label>
-      <label>Laufzeit (Jahre)
-        <input id="years" type="number" value="15" min="1">
+      <label>im Jahr
+        <input id="lumpYear" type="number" value="1" min="1">
       </label>
-      <label>Jahresrendite (%)
-        <input id="interest" type="number" value="7" step="0.1" min="0">
-      </label>
-      <label>Startkapital (€)
-        <input id="start" type="number" value="0" min="0">
-      </label>
-      <label>Zusätzliche Einmalzahlung (€)
-        <input id="lumpsum" type="number" value="0" min="0">
-      </label>
-      <label>Einmalzahlung nach … Jahren (0 = sofort)
-        <input id="lumpyear" type="number" value="0" min="0">
-      </label>
+    </div>
+  </div><br>
 
-      <button onclick="calc(false)">Berechnen (brutto)</button>
-      <button onclick="calc(true)">Berechnen (mit Steuer)</button>
-    </section>
+  <div class="row">
+    <button onclick="calc(false)">Berechnen (Brutto)</button>
+    <button onclick="calc(true)">Berechnen (mit Steuer)</button>
+  </div>
 
-    <div id="result" style="font-size:1.1rem;font-weight:600;margin-top:1.5rem"></div>
-    <canvas id="chart"></canvas>
+  <p id="result" style="font-weight:600;font-size:1.1rem;margin-top:1.5rem"></p>
 
-    <section id="compare"></section>
+  <canvas id="chart"></canvas>
 
-    <script>
-      const taxRate = 0.26375; // Kapitalertragsteuer + Soli (ohne Kirchensteuer)
-      let myChart;
+  <h2>Vergleich nach Laufzeit</h2>
+  <p id="compare"></p>
+  <canvas id="c2"></canvas>
 
-      function calc(withTax){
-        const rate     = parseFloat(document.getElementById('rate').value);
-        const years    = parseInt(document.getElementById('years').value);
-        const interest = parseFloat(document.getElementById('interest').value) / 100;
-        const startCap = parseFloat(document.getElementById('start').value);
-        const lump     = parseFloat(document.getElementById('lumpsum').value);
-        const lumpYear = parseInt(document.getElementById('lumpyear').value);
+<script>
+const TAX=0.26375; // pauschale Kapitalertragsteuer Deutschland
+let bar1,bar2;
 
-        const rMonth  = interest / 12;
-        const labels  = [];
-        const contrib = [];
-        const taxArr  = [];
-        const gainArr = [];
+document.getElementById('toggle').onclick=()=>{
+  const adv=document.getElementById('advanced');
+  const btn=document.getElementById('toggle');
+  if(adv.style.display==='none'){
+    adv.style.display='block';
+    btn.textContent='Erweiterte Optionen ausblenden ▴';
+  }else{
+    adv.style.display='none';
+    btn.textContent='Erweiterte Optionen anzeigen ▾';
+  }
+};
 
-        let value = startCap;
-        let paidTotal = startCap;
-        let taxTotal = 0;
-        let gainCum  = 0;
+function calc(withTax){
+  const rate=+document.getElementById('rate').value||0;
+  const years=+document.getElementById('years').value||0;
+  const pA=(+document.getElementById('interest').value||0)/100;
+  const start=+document.getElementById('start').value||0;
+  const lump=+document.getElementById('lump').value||0;
+  const lumpY=Math.min(years,Math.max(1,+document.getElementById('lumpYear').value||1));
 
-        for(let y=1;y<=years;y++){
-          let depositYear = rate*12;
-          if(lump>0 && y===lumpYear){
-            value += lump; // Einzahlung vor Jahresbeginn
-            paidTotal += lump;
-            depositYear += lump;
-          }
-          // 12 Monate Zins + Beiträge
-          for(let m=0;m<12;m++){
-            value = value*(1+rMonth)+rate;
-          }
-          paidTotal += rate*12;
-          const gainThisYear = value - paidTotal - taxTotal;
-          let taxThisYear = 0;
-          if(withTax && gainThisYear>0){
-            taxThisYear = gainThisYear*taxRate;
-            taxTotal   += taxThisYear;
-          }
-          gainCum = value - paidTotal - taxTotal;
+  const rM=pA/12;
+  const labels=[],contrib=[],profit=[],taxArr=[];
+  let value=start;
+  let paid=start;
+  for(let y=1;y<=years;y++){
+    for(let m=0;m<12;m++){
+      value=value*(1+rM)+rate;
+      paid+=rate;
+    }
+    if(y===lumpY){value+=lump;paid+=lump;}
+    const gain=value-paid;
+    const tax=withTax?gain*TAX:0;
+    const netGain=gain-tax;
+    labels.push('Jahr '+y);
+    contrib.push(rate*12 + (y===lumpY?lump:0));
+    profit.push(netGain-(profit.reduce((a,b)=>a+b,0)));
+    taxArr.push(tax-(taxArr.reduce((a,b)=>a+b,0)));
+  }
+  const totalTax=taxArr.reduce((a,b)=>a+b,0);
+  const endCap=value-totalTax;
+  const inTotal=paid;
+  const net=endCap-inTotal;
+  document.getElementById('result').innerHTML=
+    `Endkapital: <b>${endCap.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})}</b>  `+
+    `Einzahlungen: ${inTotal.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})}  `+
+    (withTax?`Steuer: ${totalTax.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})}  `:'')+
+    `Gewinn: ${net.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})}`;
 
-          labels.push("Jahr "+y);
-          contrib.push(depositYear);
-          taxArr.push(taxThisYear);
-          gainArr.push(gainThisYear - taxThisYear);
-        }
+  // Chart 1 gestapelt
+  if(bar1)bar1.destroy();
+  bar1=new Chart(document.getElementById('chart'),{
+    type:'bar',
+    data:{labels:labels,datasets:[
+      {label:'Einzahlung',data:contrib,backgroundColor:'rgba(99,102,241,0.6)'},
+      {label:'Gewinn (netto)',data:profit,backgroundColor:'rgba(16,185,129,0.7)'},
+      {label:'Steuer',data:taxArr,backgroundColor:'rgba(239,68,68,0.7)'}]},
+    options:{plugins:{legend:{position:'bottom'}},scales:{x:{stacked:true},y:{stacked:true,beginAtZero:true}}}
+  });
 
-        const endCap = value - taxTotal;
-        const profitNet = endCap - paidTotal;
+  // Vergleichsrechner
+  const pillow=inTotal; // 0 % Zins → nur Einzahlung
+  const day2=inTotal*Math.pow(1+0.02,years); // 2 % p.a.
+  document.getElementById('compare').textContent=`Nach ${years} Jahren: ETF‑Strategie ${endCap.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})} · Tagesgeld (2 %) ${day2.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})} · Kopf­kissen ${pillow.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})}`;
 
-        document.getElementById('result').innerHTML=
-          `Endkapital: <b>${endCap.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})}</b><br>`+
-          `Einzahlungen: ${paidTotal.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})}<br>`+
-          (withTax ? `Bez. Steuer: ${taxTotal.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})}<br>` : '')+
-          `Gewinn: ${profitNet.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})}`;
-
-        // Chart
-        if(myChart) myChart.destroy();
-        const ctx=document.getElementById('chart').getContext('2d');
-        myChart=new Chart(ctx,{
-          type:'bar',
-          data:{labels:labels,datasets:[
-            {label:'Einzahlungen',data:contrib,backgroundColor:'rgba(99,102,241,0.6)'},
-            {label:'Netto‑Gewinn',data:gainArr,backgroundColor:'rgba(16,185,129,0.6)'},
-            {label:'Steuer',data:taxArr,backgroundColor:'rgba(239,68,68,0.6)'}
-          ]},
-          options:{plugins:{legend:{position:'bottom'}},responsive:true,scales:{y:{beginAtZero:true}}}
-        });
-
-        // Vergleich
-        const tgRate=0.02;
-        const tgValue = calcAlt(value=startCap,lump,lumpYear,rate,years,tgRate);
-        const zeroValue= calcAlt(value=startCap,lump,lumpYear,rate,years,0);
-        document.getElementById('compare').innerHTML=`<h2>Vergleich nach ${years} Jahren</h2>`+
-          `<p><b>ETF${withTax?' (netto)':''}:</b> ${endCap.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})}<br>`+
-          `<b>Tagesgeld (2 %):</b> ${tgValue.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})}<br>`+
-          `<b>Kopf kissen (0 %):</b> ${zeroValue.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})}</p>`;
-      }
-
-      function calcAlt(value,startLump,lumpYear,rate,years,annualRate){
-        const rMonth = annualRate/12;
-        let val=value;
-        if(startLump>0 && lumpYear===0){val+=startLump;}
-        for(let y=1;y<=years;y++){
-          if(startLump>0 && y===lumpYear){val+=startLump;}
-          for(let m=0;m<12;m++){
-            val = val*(1+rMonth)+rate;
-          }
-        }
-        return val;
-      }
-    </script>
-  </body>
+  if(bar2)bar2.destroy();
+  bar2=new Chart(document.getElementById('c2'),{
+    type:'bar',
+    data:{labels:['ETF'+(withTax?' netto':' brutto'),'Tagesgeld 2 %','Kopf­kissen 0 %'],
+      datasets:[{label:'Endwert',backgroundColor:['rgba(16,185,129,0.7)','rgba(99,102,241,0.6)','rgba(148,163,184,0.8)'],data:[endCap,day2,pillow]}]},
+    options:{plugins:{legend:{display:false}},scales:{y:{beginAtZero:true}}}
+  });
+}
+</script>
+</body>
 </html>
