--- a/index.html
+++ b/index.html
@@ -7,137 +7,118 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body{font-family:'Inter',sans-serif;text-align:center;padding:2rem;max-width:720px;margin:auto}
-    input,button,select{width:100%;padding:.6rem;margin-top:.3rem;font-size:1rem;border:1px solid #ccc;border-radius:6px}
-    button{cursor:pointer;font-weight:600;background:#4f46e5;color:#fff;border:none}
-    button:hover{background:#4338ca}
-    .row{display:flex;gap:1rem}
-    .row input{flex:1}
-    #advanced{display:none;margin-top:1rem;border:1px dashed #aaa;padding:1rem;border-radius:6px}
-    canvas{max-width:100%;margin:2rem auto}
+    body{font-family:'Inter',sans-serif;text-align:center;padding:2rem;max-width:760px;margin:auto;}
+    h1{margin-bottom:1rem;font-size:2rem;}
+    input,select,button{font-family:'Inter',sans-serif;font-size:1rem;padding:0.4rem 0.6rem;border:1px solid #ccc;border-radius:6px;width:100%;box-sizing:border-box;}
+    label{display:block;margin:0.6rem 0;text-align:left;}
+    .row{display:flex;gap:0.5rem;}
+    .btn{background:#5146ff;color:#fff;font-weight:600;border:none;cursor:pointer;border-radius:8px;margin:0.4rem 0;}
+    .btn:hover{background:#3e37d8;}
+    #advToggle{cursor:pointer;margin:1rem 0;text-decoration:underline;font-weight:600;}
+    #advanced{display:none;border:1px dashed #bbb;padding:1rem;border-radius:8px;}
+    canvas{width:100% !important;height:420px !important;}
+    #warn{color:#c00;font-size:0.9rem;}
   </style>
 </head>
 <body>
-  <h1>PersoShift ETF‑Rechner</h1>
+  <h1>PersoShift ETF‑Rechner</h1>
 
-  <label>Monatsrate (€)
-    <input id="rate" type="number" value="50" min="1">
-  </label><br>
+  <section style="text-align:left">
+    <label>Monatsrate (€)
+      <input id="rate" type="number" value="50" min="0">
+    </label>
+    <label>Laufzeit (Jahre)
+      <input id="years" type="number" value="15" min="1">
+    </label>
+    <label>Jahresrendite (%)
+      <input id="interest" type="number" value="7" step="0.1" min="0">
+    </label>
 
-  <label>Laufzeit (Jahre)
-    <input id="years" type="number" value="15" min="1">
-  </label><br>
-
-  <label>Jahresrendite (%)
-    <input id="interest" type="number" value="7" step="0.1" min="0">
-  </label><br>
-
-  <button id="toggle">Erweiterte Optionen anzeigen ▾</button>
-
-  <div id="advanced">
-    <label>Startkapital (€)
-      <input id="start" type="number" value="0" min="0">
-    </label><br>
-
-    <div class="row">
-      <label>Einmalzahlung (€)
-        <input id="lump" type="number" value="0" min="0">
+    <div id="advToggle">Erweiterte Optionen ▼</div>
+    <div id="advanced">
+      <label>Startkapital (€)
+        <input id="start" type="number" value="0" min="0">
       </label>
-      <label>im Jahr
-        <input id="lumpYear" type="number" value="1" min="1">
-      </label>
+      <div class="row">
+        <label style="flex:1">Einmalzahlung (€)
+          <input id="lumpsum" type="number" value="0" min="0">
+        </label>
+        <label style="flex:1">im Jahr
+          <input id="lumpyear" type="number" value="1" min="1">
+        </label>
+      </div>
     </div>
-  </div><br>
 
-  <div class="row">
-    <button onclick="calc(false)">Berechnen (Brutto)</button>
-    <button onclick="calc(true)">Berechnen (mit Steuer)</button>
-  </div>
+    <button class="btn" onclick="calc(false)">Berechnen (Brutto)</button>
+    <button class="btn" onclick="calc(true)">Berechnen (mit Steuer)</button>
+    <div id="warn"></div>
+  </section>
 
-  <p id="result" style="font-weight:600;font-size:1.1rem;margin-top:1.5rem"></p>
-
+  <h2 id="headline"></h2>
   <canvas id="chart"></canvas>
-
-  <h2>Vergleich nach Laufzeit</h2>
-  <p id="compare"></p>
-  <canvas id="c2"></canvas>
+  <h3>Vergleich (Endkapital)</h3>
+  <canvas id="compare"></canvas>
 
 <script>
-const TAX=0.26375; // pauschale Kapitalertragsteuer Deutschland
-let bar1,bar2;
+const taxRate=0.26375; // 26,375 %
+let chartMain, chartCompare;
 
-document.getElementById('toggle').onclick=()=>{
-  const adv=document.getElementById('advanced');
-  const btn=document.getElementById('toggle');
-  if(adv.style.display==='none'){
-    adv.style.display='block';
-    btn.textContent='Erweiterte Optionen ausblenden ▴';
-  }else{
-    adv.style.display='none';
-    btn.textContent='Erweiterte Optionen anzeigen ▾';
-  }
-};
+// Dropdown
+const adv=document.getElementById('advanced');
+const tog=document.getElementById('advToggle');
+tog.onclick=()=>{adv.style.display=adv.style.display==='none'? 'block':'none'; tog.textContent= adv.style.display==='none'? 'Erweiterte Optionen ▼':'Erweiterte Optionen ▲';};
+
+function fmt(n){return n.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0});}
 
 function calc(withTax){
-  const rate=+document.getElementById('rate').value||0;
-  const years=+document.getElementById('years').value||0;
-  const pA=(+document.getElementById('interest').value||0)/100;
-  const start=+document.getElementById('start').value||0;
-  const lump=+document.getElementById('lump').value||0;
-  const lumpY=Math.min(years,Math.max(1,+document.getElementById('lumpYear').value||1));
+  const rate=parseFloat(rateElem.value||0);
+  const yrs=parseInt(yearsElem.value||0);
+  const p=parseFloat(interestElem.value||0)/100;
+  const start=parseFloat(startElem.value||0);
+  const lump=parseFloat(lumpsumElem.value||0);
+  const lumpY=parseInt(lumpyearElem.value||0);
 
-  const rM=pA/12;
-  const labels=[],contrib=[],profit=[],taxArr=[];
-  let value=start;
-  let paid=start;
-  for(let y=1;y<=years;y++){
-    for(let m=0;m<12;m++){
-      value=value*(1+rM)+rate;
-      paid+=rate;
-    }
-    if(y===lumpY){value+=lump;paid+=lump;}
-    const gain=value-paid;
-    const tax=withTax?gain*TAX:0;
-    const netGain=gain-tax;
+  warn.textContent='';
+  if(yrs<1){warn.textContent='Bitte Laufzeit ≥ 1 Jahr eingeben';return;}
+  if(lump>0 && (lumpY<1||lumpY>yrs)){warn.textContent='Jahr für Einmalzahlung liegt außerhalb der Laufzeit';return;}
+
+  const mRate=p/12, months=yrs*12;
+  let value=start; let paid=start;
+  const labels=[], dep=[], netGain=[], taxArr=[];
+  for(let y=1;y<=yrs;y++){
+    for(let m=0;m<12;m++){value=value*(1+mRate)+rate;}
+    paid+=rate*12;
+    if(y===lumpY){value+=lump; paid+=lump;}
+    const gross=value-paid;
+    const tax=withTax?gross*taxRate:0;
+    const net=gross-tax;
     labels.push('Jahr '+y);
-    contrib.push(rate*12 + (y===lumpY?lump:0));
-    profit.push(netGain-(profit.reduce((a,b)=>a+b,0)));
-    taxArr.push(tax-(taxArr.reduce((a,b)=>a+b,0)));
+    dep.push(rate*12 + (y===lumpY?lump:0));
+    netGain.push(net);
+    taxArr.push(tax);
   }
-  const totalTax=taxArr.reduce((a,b)=>a+b,0);
-  const endCap=value-totalTax;
-  const inTotal=paid;
-  const net=endCap-inTotal;
-  document.getElementById('result').innerHTML=
-    `Endkapital: <b>${endCap.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})}</b>  `+
-    `Einzahlungen: ${inTotal.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})}  `+
-    (withTax?`Steuer: ${totalTax.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})}  `:'')+
-    `Gewinn: ${net.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})}`;
+  const end= value - (withTax?grossTaxTotal(netGain,taxArr):0);
+  headline.textContent=`Endkapital: ${fmt(value)}   Einzahlungen: ${fmt(paid)}   Gewinn: ${fmt(value-paid)}`;
+  drawChart(labels,dep,netGain,taxArr);
+  drawCompare(value,paid,p);}
 
-  // Chart 1 gestapelt
-  if(bar1)bar1.destroy();
-  bar1=new Chart(document.getElementById('chart'),{
-    type:'bar',
-    data:{labels:labels,datasets:[
-      {label:'Einzahlung',data:contrib,backgroundColor:'rgba(99,102,241,0.6)'},
-      {label:'Gewinn (netto)',data:profit,backgroundColor:'rgba(16,185,129,0.7)'},
-      {label:'Steuer',data:taxArr,backgroundColor:'rgba(239,68,68,0.7)'}]},
-    options:{plugins:{legend:{position:'bottom'}},scales:{x:{stacked:true},y:{stacked:true,beginAtZero:true}}}
-  });
+function grossTaxTotal(net,taxes){let t=0;for(let i=0;i<taxes.length;i++)t+=taxes[i];return t;}
 
-  // Vergleichsrechner
-  const pillow=inTotal; // 0 % Zins → nur Einzahlung
-  const day2=inTotal*Math.pow(1+0.02,years); // 2 % p.a.
-  document.getElementById('compare').textContent=`Nach ${years} Jahren: ETF‑Strategie ${endCap.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})} · Tagesgeld (2 %) ${day2.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})} · Kopf­kissen ${pillow.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0})}`;
+function drawChart(labels,dep,net,tax){ if(chartMain) chartMain.destroy();
+  chartMain=new Chart(document.getElementById('chart').getContext('2d'),{
+    type:'bar',data:{labels,datasets:[
+      {label:'Einzahlung',data:dep,backgroundColor:'rgba(101,115,255,.7)',stack:'all'},
+      {label:'Gewinn (netto)',data:net,backgroundColor:'rgba(46,204,113,.7)',stack:'all'},
+      {label:'Steuer',data:tax,backgroundColor:'rgba(231,76,60,.7)',stack:'all'}]},
+    options:{maintainAspectRatio:false,responsive:true,plugins:{legend:{position:'bottom'}},scales:{y:{beginAtZero:true}}}});} 
 
-  if(bar2)bar2.destroy();
-  bar2=new Chart(document.getElementById('c2'),{
-    type:'bar',
-    data:{labels:['ETF'+(withTax?' netto':' brutto'),'Tagesgeld 2 %','Kopf­kissen 0 %'],
-      datasets:[{label:'Endwert',backgroundColor:['rgba(16,185,129,0.7)','rgba(99,102,241,0.6)','rgba(148,163,184,0.8)'],data:[endCap,day2,pillow]}]},
-    options:{plugins:{legend:{display:false}},scales:{y:{beginAtZero:true}}}
-  });
-}
+function drawCompare(end,paid,p){ if(chartCompare) chartCompare.destroy();
+  const bank0=paid; const tages=paid*Math.pow(1+0.02,document.getElementById('years').value);
+  chartCompare=new Chart(document.getElementById('compare').getContext('2d'),{
+    type:'bar',data:{labels:['ETF','Bank 0 %','Tagesgeld 2 %'],datasets:[{data:[end,bank0,tages],backgroundColor:['rgba(46,204,113,.7)','rgba(149,165,166,.7)','rgba(52,152,219,.7)']}]},
+    options:{maintainAspectRatio:false,responsive:true,plugins:{legend:{display:false}},scales:{y:{beginAtZero:true}}}});} 
+
+const rateElem=rate,yearsElem=years,interestElem=interest,startElem=start,lumpsumElem=lumpsum,lumpyearElem=lumpyear,warn=document.getElementById('warn');
 </script>
 </body>
 </html>
